--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
   min-width: 100%;
 }
 
-h1 { font-size: 2rem; }
+h1 { font-size: 2rem; line-height: 1; }
 h2,h3,h4,h5,h6,p,ul,li,blockquote { font-size: 1rem; }
 
 p {margin:0;}
@@ -148,41 +148,118 @@ main nav { width: 20%; }
 main > div { width: 80%; }
 
 nav .menu {
-  margin-top: calc(5em - 2px);
+  margin-top: 4rem;
   border-top: 1px solid;
 }
 
 nav li a,
 .drawers li a {
-  padding: .75em 2em;
+  padding: .75rem 2rem;
 }
 
 .drawers li a {
   text-decoration: none;
   display: block;
   border-bottom: 1px solid;
-  margin-left: -2em;
-  margin-right: -2em;
-}
-
-.drawers li:first-child a {
-  border-top: 1px solid;
 }
 
 .drawers li:last-child button {
   display: block;
-  padding: .75em 2em .75em 3.25em;
+  padding: .75rem 2rem .75rem 3.25rem;
   border:none;
   border-bottom: 1px solid;
-  margin-left: -2em;
-  margin-right: -2em;
-  width: calc(100% + 4em);
-  font-size: 1em;
+  width: 100%;
+  font-size: 1rem;
   text-align: left;
   background: transparent;
 }
 
 .drawers li:last-child i.fa-plus {
   position: absolute;
-  top: .8em;
+  top: .8rem;
+  left: 2rem;
+}
+
+.content {
+  padding: 2rem;
+}
+
+.content .dropzone {
+  margin-left: -2rem;
+  margin-right: -2rem;
+}
+
+/** sprucing up the side nav **/
+
+nav .menu .fa {
+  padding: .575em 0;
+  height: 2.2em;
+  width: 2.2em;
+  text-align: center;
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0 0 0.33em 0 rgba(047,041,038,.333);
+  margin-right: .5em;
+}
+
+nav .menu a:hover .fa {
+  background-color: rgba(047,041,038,1);
+  box-shadow: 0 0 0em 0 rgba(047,041,038,.333);
+}
+
+
+/***** editable form stuff, this should go into a new place, specifically for that stuff,
+and a lot should probably be attempted to be made into the JS inline styles stuff ******/
+
+.editable-click,
+.editable-parent,
+.editable-row,
+.editable-buttons,
+.btn-secret,
+.editable-row > input,
+.editable-fixed-value {
+  font-size: 1rem;
+  line-height: 1.4rem;
+}
+
+.editable-click,
+.editable-parent,
+.editable-row,
+.editable-buttons {
+  display:inline-block;
+  position: relative;
+  min-height: calc(1.4rem + 2px);
+}
+
+.btn-secret,
+.editable-row > input {
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid #fedb00;
+  padding:0;
+  transition: all 300ms;
+  cursor: pointer;
+}
+
+.btn-secret,
+.editable-row > input,
+.editable-fixed-value {
+  margin-left: .5rem;
+}
+
+.btn-secret:focus,
+.editable-row > input:focus {
+  background-color: #fedb00;
+  outline-color: #fedb00;
+  padding-left: .3rem;
+  padding-right: .3rem;
+}
+
+.editable-buttons {
+  margin-left: .3rem;
+}
+
+.editable-empty,
+.editable-empty .btn-secret {
+  color: gray;
 }
