--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ nav li a,
 
 .drawers li:first-child button {
   display: block;
-  padding: .75rem 2rem .75rem 3.25rem;
+  padding: .75rem 2rem .75rem 2rem;
   border:none;
   border-bottom: 1px solid;
   width: 100%;
@@ -238,7 +238,7 @@ nav li a,
 .drawers li:first-child i.fa-plus {
   position: absolute;
   top: .8rem;
-  left: 2rem;
+  left: .66rem;
   transition: transform 400ms, text-shadow 400ms;
   transform: scale(1);
   text-shadow: 0 0 0 rgba(096,103,103,0);
@@ -387,29 +387,134 @@ and a lot should probably be attempted to be made into the JS inline styles stuf
   padding: 1rem;
 }
 
-.delete,
-.selectItem {
+button {  cursor: pointer; }
+
+.delete {
+  position: absolute;
+  top: .25rem;
+  right:1rem;
+  height: 2rem;
+  width: 2rem;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 50%;
+  color:white;
+  padding:0;
+  margin: 0;
+  opacity: 0;
+  z-index: 1;
+  color:transparent;
+  outline: 0;
+}
+.delete::after {
+  position: absolute;
+  top: -2px;
+  right: -2px;
+  height: 2rem;
+  width: 2rem;
+  line-height: 2rem;
+  display: block;
+  content: '\f064';
+  font-family: 'DL';
+  color:white;
+  font-size: 1rem;
+  text-align: center;
+}
+.drawers li:hover .delete {
+  opacity: 1;
+}
+.delete:hover {
+  box-shadow: 0 0 .5rem 0 rgba(0,0,0,.4);
+}
+.delete:active,
+.delete:focus {
+   outline: 0;
+   -webkit-box-shadow: 0 0 0 2px #fff, 0 0 1px 4px rgba(195,115,099,.8);
+   -moz-box-shadow: 0 0 0 2px #fff,0 0 1px 4px rgba(195,115,099,.8);
+   -ms-box-shadow: 0 0 0 2px #fff,0 0 1px 4px rgba(195,115,099,.8);
+   -o-box-shadow: 0 0 0 2px #fff,0 0 1px 4px rgba(195,115,099,.8);
+   box-shadow: 0 0 0 2px #fff, 0 0 1px 4px rgba(195,115,099,.8);
+ }
+
+
+.drawers .date {
+  font-family: monospace;
+  width: 4.5rem;
+  display: inline-block;
+}
+
+/** custom input from WTFforms **/
+.control {
+  position: relative;
+  display: inline-block;
+  padding-left: 1.5rem;
+  color: #555;
+  cursor: pointer;
+  z-index: 9;
+}
+.drawers li .control {
   position: absolute;
   top: 0;
+  left: 0;
   height: calc(100% - 1px);
+  width: 2rem;
   padding: 0;
   margin: 0;
 }
-.selectItem {
-  left: .75rem;
-  font-size: 2rem;
+.control input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
 }
-.delete {
-  right: 0;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border: none;
-  background: rgba(255,255,255,.5);
-  border-top: none;
-  border-bottom: none;
-  cursor: pointer;
+.control-indicator {
+  position: absolute;
+  top: 33%;
+  left: .5rem;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  line-height: 1rem;
+  font-size: 65%;
+  color: #eee;
+  text-align: center;
+  background-color: #eee;
+  background-size: 50% 50%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: 9;
+  transition: 350ms;
+}
+.checkbox .control-indicator {
+  border-radius: .25rem;
+}
+.control input:checked ~ .control-indicator {
+  color: #fff;
+  background-color: rgba(194,211,186,1);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 1px 3px rgba(194,211,186,.75);
+  -moz-box-shadow: 0 0 0 1px #fff,0 0 1px 3px rgba(194,211,186,.75);
+  -ms-box-shadow: 0 0 0 1px #fff,0 0 1px 3px rgba(194,211,186,.75);
+  -o-box-shadow: 0 0 0 1px #fff,0 0 1px 3px rgba(194,211,186,.75);
+  box-shadow: 0 0 0 1px #fff, 0 0 1px 3px rgba(194,211,186,.75);
 }
 
+.checkbox input:checked ~ .control-indicator::after {
+  content: '\f003';
+  display: block;
+  font-size: .8rem;
+  color: rgba(252,251,248,1);
+  line-height: 1rem;
+  text-align: center;
+  width: 1rem;
+  height: 1rem;
+  font-family: 'DL';
+  position: absolute;
+  z-index: 10;
+}
 .flex {
   display:flex;
 }
